--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.17.3",
@@ -20,6 +21,7 @@
     "jotai": "^2.8.3",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-auth": "5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-gradient-mask-image": "^1.2.0",
