feat: integrated with be

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-table": "^8.17.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
     "jotai": "^2.8.3",
     "lucide-react": "^0.395.0",
@@ -24,6 +25,7 @@
     "next-auth": "5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
+    "swr": "^2.2.5",
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
